--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.18",
-    "prisma": "^5.3.1",
+    "prisma": "^5.4.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.4.2",
     "express": "^4.18.2"
   }
 }
