--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "minuninu",
+  "name": "simuladoweb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "predev": "npx tsc",
-    "dev": "node ./dist/index.js"
+    "dev": "node ./dist/app.js",
+    "start": "node ./dist/app.js && npm run open-html",
+    "open-html": "start index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.18",
-    "prisma": "^5.4.2",
+    "@types/node": "^20.8.2",
+    "prisma": "^5.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.4.2",
-    "express": "^4.18.2"
+    "@prisma/client": "^5.3.1",
+    "express": "^4.18.2",
+    "sqlite": "^5.0.1"
   }
 }
