--- a/package.json
+++ b/package.json
@@ -6,23 +6,29 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "predev": "npx tsc",
-    "dev": "node ./dist/app.js",
-    "start": "node ./dist/app.js && npm run open-html",
-    "open-html": "start index.html"
+    "dev": "npm run predev && node ./dist/app.js",
+    "open-html": "start npm ./src/views/index.html",
+    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "start:backend": "npm run dev",
+    "start:frontend": "cd frontend && npm run dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.18",
-    "@types/node": "^20.8.2",
+    "@types/node": "^20.10.1",
+    "concurrently": "^8.2.2",
     "prisma": "^5.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "sqlite": "^5.0.1"
+    "sqlite": "^5.0.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
