--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/views/scrip.js"],
   "exclude": ["dist"]
 }
