--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "open-html": "start npm ./src/views/index.html",
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "start:backend": "npm run dev",
-    "start:frontend": "cd frontend && npm run dev"
+    "start:frontend": "cd frontend && npm run dev",
+    "install-all": "npm install && cd frontend && npm install && cd ../"
   },
   "keywords": [],
   "author": "",
